--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "antd": "^5.23.3",
     "async-mutex": "^0.5.0",
     "axios": "^1.7.9",
+    "d3-force-3d": "^3.0.6",
+    "dagre": "^0.8.5",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "html-react-parser": "^5.2.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "rbush": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
@@ -43,8 +47,10 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/d3-array": "^3.2.1",
+    "@types/dagre": "^0.7.53",
     "@types/jest": "^30.0.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.0.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
